--- a/Baha'i/Baha/KA/p103-140QA.html
+++ b/Baha'i/Baha/KA/p103-140QA.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Baha\KA\p103-140QA.html -->
 
+<!-- Issues List
+Q10 - left Súriy-i-Hajj as in printed version (not Súriy-i-Hájj)
+Q23 - left nakhuds  as in printed version (not nákhuds
+Q63 - left rak'ahs as in printed version (not rak’áhs)
+104 - left Abá Badí as in printed version (no 'Abá Badí)
+-->
+
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Questions And Anwsers</title>
@@ -35,7 +42,7 @@
 <tr>
 	<td width="5%">&nbsp;</td>
 	<td width="77%"><center><h2>QUESTIONS AND ANSWERS</h2></center></td>
-	<td width="15%"><small>[Questions And Answers] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para122">p. 383</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p26">p. 26</a>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p278">p. 278</a>-9, <a href="../../Others/ROB/V3/p275-307Ch13.html#p284">p. 284</a></small></td>
+	<td width="15%"><small>[CLUI: <a href="../../../CLUI/UnifiedIndex.html#QuestionsandAnswers">Questions And Answers</a>]</small></td>
 	<td VALIGN=top><small><center><a name="p103">103</a></center></small></td>
 </tr>
 <tr>
@@ -60,8 +67,11 @@
 		QUESTION:  <i>Concerning the Festival of the Twin Birthdays</i>.<p>
 		ANSWER:  The Birth of the Abhá Beauty* was at the hour of dawn on the second day of the month of Muharram,† the first day of which marketh the Birth of His Herald.  These two days are accounted as one in the sight of God.<p>
 	</td>
-	<td><small>* Bahá'u'lláh<p>† First month of the Islámic lunar calendar</small>
-	    <hr><small>Note <a href="p165-251Notes.html#note138">138</a></small></td>
+	<td><small>
+	* <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláh">Bahá'u'lláh</a><p>
+	† First month of the Islámic lunar calendar</small>
+	<hr>
+	<small>Note <a href="p165-251Notes.html#note138">138</a></small></td>
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -572,8 +582,8 @@
 		ANSWER:  Many Tablets were revealed and dispatched in their original form without being checked and reviewed.  Consequently, as bidden, they were again read out in the Holy Presence, and brought into conformity with the grammatical conventions of the people in order to forestall the cavils of opponents of the Cause.  Another reason for this practice is that the new style inaugurated by the Herald, may the souls of all else but Him be offered up for His sake, was seen to be marked by substantial latitude in adherence to the rules of <a name="p124"></a> grammar; sacred verses therefore were then revealed in a style which is for the most part in conformity with current usage for ease of understanding and concision of expression.<p>
 	</td>
 	<td VALIGN=top><small>
-	<br><hr>
-	[Re-revelation] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 p. <a href="../../Others/ROB/V4/p368-390Ch24.html#p372">372</a>
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#ESWre-revelationofTablets">re-revelation of Tablets</a>]
 	</small>
 	</td>		
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">124</DIV></center></small></td>
@@ -969,7 +979,7 @@
 		QUESTION:  <i>Concerning inheritance.</i><p>
 		ANSWER:  Regarding inheritance, that which the Primal Point hath ordained--may the souls of all else but Him be offered up for His sake--is well pleasing.  The existing heirs should receive their allotted shares of the inheritance, while a statement of the remainder must be submitted to <a name="p137"></a> the Court of the Most High.  In His hand is the source of authority; He ordaineth as He pleaseth.  In this regard, a law was revealed in the Land of Mystery,* temporarily awarding the missing heirs' inheritance to the existing heirs until such time as the House of Justice shall be established, when the decree concerning this will be promulgated.  The inheritance, however, of those who emigrated in the same year as the Ancient Beauty, hath been awarded to their heirs, and this is a bounty of God bestowed upon them.<p>
 	</td>
-	<td VALIGN=top><small>* Adrianople</small></td>
+	<td VALIGN=top><small>* <a href="../../../CLUI/UnifiedIndex.html#Adrianople">Adrianople</a></small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">137</DIV></center></small></td>
 </tr>
 <tr>
@@ -1002,9 +1012,11 @@
 <tr>
 	<td VALIGN=top><center><a name="qa104"/>104.</center></td>
 	<td VALIGN=top>
-		In the Tablet to Aba Badí', this holy verse hath been revealed:  "Verily, We have enjoined on every son to serve his father."  Such is the decree which We have set forth in the Book.<p>
+		In the Tablet to Abá Badí', this holy verse hath been revealed:  "Verily, We have enjoined on every son to serve his father."  Such is the decree which We have set forth in the Book.<p>
 	</td>
-	<td VALIGN=top><hr><small>[Abá Badí'] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p174-203Ch09.html#p203">p. 203</a>, <a href="../../Others/ROB/V3/p174-203Ch09.html#p179">p. 179</a>-180, vol. 2 <a href="../../Others/ROB/V2/p107-136Ch05.html#p130">p. 130</a></small></td>
+	<td VALIGN=top><hr><small>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#TablettoHájí'Abdu'l-Majíd(Abá Badí')">Tablet to Abá Badí'</a>]
+	</small></td>
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -1013,7 +1025,7 @@
 		<i>And in another Tablet, these exalted words have been revealed:</i>  O Muhammad!  The Ancient of Days hath turned His countenance towards thee, making mention of thee, and exhorting the people of God to educate their children.  Should a father neglect this most weighty commandment laid down in the Kitáb-i-Aqdas by the Pen of the Eternal King, he shall forfeit rights of fatherhood, and be accounted guilty before God.  Well is it with him who imprinteth on his heart the admonitions of the Lord, and steadfastly cleaveth unto them.  God, in truth, enjoineth on His servants what shall assist and profit them, and enable them to draw nigh unto Him.  He is the Ordainer, the Everlasting.<p>
 	</td>
 	<td VALIGN=top><hr><small>
-	[Education of Children] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p322-342Ch15.html#p326">p. 326</a>-327
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Childreneducationof">Education of Children</a>]
 	</small>
 	</td>		
 	<td>&nbsp;</td>
@@ -1021,17 +1033,17 @@
 <tr>
 	<td VALIGN=top><center><a name="qa106"/>106.</center></td>
 	<td VALIGN=top>
-		<a name="p139"></a>He is God, exalted be He, the Lord of majesty and power!  The Prophets and Chosen Ones have all been commissioned by the One True God, magnified be His glory, to nurture the trees of human existence with the living waters of uprightness and understanding, that there may appear from them that which God hath deposited within their inmost selves.  As may be readily observed, each tree yieldeth a certain fruit, and a barren tree is but fit for fire.  The purpose of these Educators, in all they said and taught, was to preserve man's exalted station.  Well is it with him who in the Day of God hath laid fast hold upon His precepts and hath not deviated from His true and fundamental Law.  The fruits that best befit the tree of human life are trustworthiness and godliness, truthfulness and sincerity; but greater than all, after recognition of the unity of God, praised and glorified be He, is regard for the rights that are due to one's parents.  This teaching hath been mentioned in all the Books of God, and reaffirmed by the Most Exalted Pen.  Consider that which the Merciful Lord hath revealed in the Qur'án, exalted are His words:  "Worship ye God, join with Him no peer or likeness; and show forth kindliness and charity towards your parents. . ."  Observe how loving-kindness to one's parents hath been linked to recognition of the one true God!  Happy they who are endued with true wisdom and understanding, who see and perceive, who read and understand, and who observe that which God hath <a name="p140"></a> revealed in the Holy Books of old, and in this incomparable and wondrous Tablet.<p>
+	<a name="p139"></a>He is God, exalted be He, the Lord of majesty and power!  The Prophets and Chosen Ones have all been commissioned by the One True God, magnified be His glory, to nurture the trees of human existence with the living waters of uprightness and understanding, that there may appear from them that which God hath deposited within their inmost selves.  As may be readily observed, each tree yieldeth a certain fruit, and a barren tree is but fit for fire.  The purpose of these Educators, in all they said and taught, was to preserve man's exalted station.  Well is it with him who in the Day of God hath laid fast hold upon His precepts and hath not deviated from His true and fundamental Law.  The fruits that best befit the tree of human life are trustworthiness and godliness, truthfulness and sincerity; but greater than all, after recognition of the unity of God, praised and glorified be He, is regard for the rights that are due to one's parents.  This teaching hath been mentioned in all the Books of God, and reaffirmed by the Most Exalted Pen.  Consider that which the Merciful Lord hath revealed in the Qur'án, exalted are His words:  "Worship ye God, join with Him no peer or likeness; and show forth kindliness and charity towards your parents. . ."  Observe how loving-kindness to one's parents hath been linked to recognition of the one true God!  Happy they who are endued with true wisdom and understanding, who see and perceive, who read and understand, and who observe that which God hath <a name="p140"></a> revealed in the Holy Books of old, and in this incomparable and wondrous Tablet.
 	</td>
 	<td VALIGN=top><hr><small>
-		 [Parents] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V2/p469-476Index.html#Parents">vol. 2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Parents">vol. 3</a>		 
-		 </td>			
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Parents">Parents</a>]		 
+	</td>			
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">139</DIV><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><DIV TITLE="Page number location is approximate">140</DIV></center></small></td>
 </tr>
 <tr>
 	<td VALIGN=top><center><a name="qa107"/>107.</center></td>
 	<td VALIGN=top>
-		<i>In one of the Tablets He, exalted be His words, hath revealed:</i>  And in the matter of Zákat, We have likewise decreed that you should follow what hath been revealed in the Qur'án.<p>
+	<i>In one of the Tablets He, exalted be His words, hath revealed:</i>  And in the matter of Zakát, We have likewise decreed that you should follow what hath been revealed in the Qur'án.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note161">161</a></small></td>
 	<td>&nbsp;</td>
