--- a/Baha'i/Baha/KA/p141-164Synopsis.html
+++ b/Baha'i/Baha/KA/p141-164Synopsis.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Baha\KA\p141-164Synopsis.html -->
 
+<!-- Issues List
+p153 - left Islamic as in printed version (not Islámic)
+-->
+
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, A Synopsis And Codification</title>
@@ -92,7 +96,7 @@
 	   <blockquote>
 	   <ol type=A start="" title="" compact>
 	   <li>The faithful are enjoined to turn their faces towards the One <i>"Whom God hath purposed, Who hath branched from this Ancient Root"</i>.<p> 
-	   <li>The faithful are bidden to refer whatsoever they do not understand in the Bahá'i writings to <i>"Him Who hath branched from this mighty Stock"</i>.
+	   <li>The faithful are bidden to refer whatsoever they do not understand in the Bahá’í writings to <i>"Him Who hath branched from this mighty Stock"</i>.
 	   </ol>
 	   </blockquote>
 	   
@@ -118,7 +122,7 @@
 	   </ol>
 	        <blockquote>
 			<ol type=1 start="" title="" compact>
-			<li>The sublime station occupied by the Obligatory Prayers in the Bahá'i Revelation.<p>
+			<li>The sublime station occupied by the Obligatory Prayers in the Bahá’í Revelation.<p>
 			<li>The Qiblih: 
 			</ol>
 			     <blockquote>
@@ -222,7 +226,7 @@
 	   </ol>
 	   	    <blockquote>
 			<ol type=1 start="" title="" compact>
-			<li>The sublime station occupied by fasting in the Bahá'i Revelation.<p>
+			<li>The sublime station occupied by fasting in the Bahá'í Revelation.<p>
 			<li>The period of fasting commences with the termination of the Intercalary Days, and ends with the Naw-Rúz Festival.<p>
 			<li>Abstinence from food and drink, from sunrise to sunset, is obligatory.<p>
 			<li>Fasting is binding on men and women on attaining the age of maturity, which is fixed at 15.<p> 
@@ -244,9 +248,10 @@
 	   </blockquote>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p148">148</a></center><p>
-	   [Fast] <i>The Kitáb-i-Íqán</i>, <a href="../KI/p001-094.html#para39">p. 39</a>-40; <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p397-421Ch19.html#p397">p. 397</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../../Others/ROB/V4/p001-010Ch01.html#p9">p. 9</a><p>
-	   [Naw-Rúz] <i>Prayers and Meditations</i>, <a href="../PM/p003-340.html#para225">p. 67</a>;<i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../../Others/ROB/V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../../Others/ROB/V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Naw-Rúz">4</a><p>	   
+       <td VALIGN=top><small><center><a name="p148">148</a></center>
+	   <hr>
+	   [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Fasting">Fasting</a>]<p>
+	   [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Badí'CalendarNaw-Rúz">Naw-Rúz</a>]	   
 	   </small></td>
 </tr>
 <tr>
@@ -385,7 +390,7 @@
 				 <ol type=a start="7" title="" compact>
 				 <li>Should differences arise between husband and wife while travelling, he is required to send her home, or entrust her to a dependable person, who will escort her there, paying her journey and her full year's expenses.<p>
 				 <li>Should a wife insist on divorcing her husband rather than migrate to another country, the year of waiting is to be counted from the time they separate, either while he is preparing to leave, or upon his departure.<p>
-				 <li>The Islámic law regarding remarriage with the wife whom one has previously divorced is abrogated.<p> 
+				 <li>The Islamic law regarding remarriage with the wife whom one has previously divorced is abrogated.<p> 
 				 </ol>
 			     </blockquote>
 			<ol type=1 start="3" title="" compact>
@@ -469,8 +474,8 @@
 		 	     <blockquote>					 					  				 					  				 					 							 			
 	   			 <ol type=a start="11" title="" compact>
 				 <li>In case there are full brothers or full sisters, brothers and sisters from the mother's side do not inherit.<p>
-				 <li>A non-Bahá'i teacher does not inherit.  If there should be more than one teacher, the share allotted to the teacher is to be equally divided among them.<p>
-				 <li>Non-Bahá'i heirs do not inherit.<p>
+				 <li>A non-Bahá'í teacher does not inherit.  If there should be more than one teacher, the share allotted to the teacher is to be equally divided among them.<p>
+				 <li>Non-Bahá'í heirs do not inherit.<p>
 				 <li>Aside from the wife's used clothing and gifts of jewellery or otherwise which have been proven to have been given her by her husband, whatever the husband has purchased for his wife are to be considered as the husband's possessions to be divided among his heirs.<p>
 				 <li>Any person is at liberty to will his possessions as he sees fit provided he makes provisions for the payment of Huqúqu'lláh and the discharge of his debts.
 				 </ol>
@@ -489,8 +494,8 @@
 				 <li>Huqúqu'lláh
 				 <li>Endowments
 				 <li>The Mashriqu'l-Adhkár
-				 <li>Duration of the Bahá'i Dispensation
-				 <li>Bahá'i Festivals
+				 <li>Duration of the Bahá'í Dispensation
+				 <li>Bahá'í Festivals
 				 </ol>
 			     </blockquote>			
 	        </blockquote>				   				   
@@ -506,7 +511,7 @@
 			     <blockquote>			
 				 <ol type=a start="7" title="" compact>
 				 <li>The Nineteen Day Feast
-				 <li>The Bahá'i Year
+				 <li>The Bahá'í Year
 				 <li>The Intercalary Days
 				 <li>The age of maturity
 				 <li>Burial of the dead
@@ -514,7 +519,7 @@
 				 <li>Obedience to government
 				 <li>Education of children
 				 <li>The writing of a testament
-				 <li>Tithes (Zákat)
+				 <li>Tithes (Zakát)
 				 <li>Repetition of the Greatest Name 95 times a day 
 				 <li>The hunting of animals
 				 <li>Treatment of female servants
@@ -744,7 +749,7 @@
 	   <li>MISCELLANEOUS SUBJECTS
 
 	   <ol type=1 start="" title="" compact>
-	   <li>The transcendent character of the Bahá'i Revelation
+	   <li>The transcendent character of the Bahá'í Revelation
 	   <li>The exalted station of the Author of the Faith
 	   <li>The supreme importance of the Kitáb-i-Aqdas, "The Most Holy Book"
 	   <li>The doctrine of the "Most Great Infallibility"
