--- a/Baha'i/Baha/KA/Contents.html
+++ b/Baha'i/Baha/KA/Contents.html
@@ -6,6 +6,21 @@
 	<title>The Kitáb-i-Aqdas, Contents</title>
 </head>
 
+<style>
+.dot-div {
+  border-bottom:dotted 2px black;
+  width: 100%;
+  height: 14px
+}
+.text-div {
+  margin-top: -14px
+}
+.text-span {
+  background: #fff;
+  padding-right: 5px
+}
+</style>
+
 <body>
 
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
@@ -13,7 +28,7 @@
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -26,7 +41,7 @@
        <td>
 	   	   <FORM ACTION="Preface.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -36,65 +51,110 @@
 <blockquote>
 <table border="0" cellspacing="2" cellpadding="0" WIDTH="90%" bgcolor="">
 <tr>
-       <td width="80%" VALIGN=top></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=bottom><i><div align="right">Page</div></i></td>
+       <td VALIGN=top></td>
+       <td VALIGN=bottom><i><div align="right">Page</div></i></td>
+</tr>
+
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>PREFACE</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="Preface.html">vii</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>PREFACE</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="Preface.html">vii</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>INTRODUCTION</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-011Intro.html">1</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>INTRODUCTION</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-011Intro.html">1</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>A DESCRIPTION OF THE KITÁB-I-AQDAS, BY SHOGHI EFFENDI</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p012-018Desc.html">12</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>A DESCRIPTION OF THE KITÁB-I-AQDAS<br>&nbsp;&nbsp;&nbsp;&nbsp;BY SHOGHI EFFENDI</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p012-018Desc.html">12</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>THE KITÁB-I-AQDAS</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p019-088Aqdas.html">19</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>THE KITÁB-I-AQDAS</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p019-088Aqdas.html">19</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>SOME SUPPLEMENTARY TEXTS</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p089-102Supp.html">89</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>SOME SUPPLEMENTARY TEXTS</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p089-102Supp.html">89</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>QUESTIONS AND ANSWERS</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p103-140QA.html">103</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>QUESTIONS AND ANSWERS</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p103-140QA.html">103</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>A SYNOPSIS AND CODIFICATION OF THE LAWS AND ORDINANCES OF THE KITÁB-I-AQDAS</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p141-164Synopsis.html">141</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>A SYNOPSIS AND CODIFICATION OF THE LAWS<br>&nbsp;&nbsp;&nbsp;&nbsp;AND ORDINANCES OF THE KITÁB-I-AQDAS</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p141-164Synopsis.html">141</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>NOTES</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p165-251Notes.html">165</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>NOTES</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p165-251Notes.html">165</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>GLOSSARY</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p252-254Glossary.html">252</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>GLOSSARY</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p252-254Glossary.html">252</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>KEY TO PASSAGES FROM THE AQDAS, TRANSLATED BY SHOGHI EFFENDI</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p255-257Key.html">255</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>KEY TO PASSAGES FROM THE AQDAS<br>&nbsp;&nbsp;&nbsp;&nbsp;TRANSLATED BY SHOGHI EFFENDI</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p255-257Key.html">255</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>INDEX</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p258-296Index.html">258</a></div></td>
 </tr>
-<tr>
-       <td width="80%" VALIGN=top><b>INDEX</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p258-296Index.html">258</a></div></td>
-</tr>
+
 </table>
 </blockquote>
 
@@ -103,7 +163,7 @@
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -116,7 +176,7 @@
        <td>
 	   	   <FORM ACTION="Preface.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
