--- a/Baha'i/Baha/KA/Preface.html
+++ b/Baha'i/Baha/KA/Preface.html
@@ -31,26 +31,66 @@
 </tr>
 </table>
 
-<table border="1" cellspacing="2" cellpadding="2" width="100%" bgcolor="">
+<table id=maintext border="1" cellspacing="2" cellpadding="5" width=100%>
 <tr>
-       <td width="80%"><center><h2>PREFACE</h2></center><p>
-	   IN 1953 Shoghi Effendi, the Guardian of the Bahá'í Faith, included as one of the goals of his Ten Year Plan the preparation of a Synopsis and Codification of the Laws and Ordinances of the Kitáb-i-Aqdas as an essential prelude to its translation. He himself worked on the codification, but had not finished it when he died in 1957. The task was continued on the basis of his work, and the resulting volume was released in 1973. That publication included, in addition to the Synopsis and Codification itself and explanatory notes, a compilation of the passages from the Kitáb-i-Aqdas which had already been translated by Shoghi Effendi and published in various books. The Synopsis and Codification covered the text of both the Kitáb-i-Aqdas and the Questions and Answers which constitutes an appendix to the Aqdas. In 1986 the Universal House of Justice decided that the time had come when the preparation of an English translation of the complete text of the Most Holy Book was both possible and essential and made its accomplishment a goal of the Six Year Plan 1986-1992. Its publication in English will be followed by translations in other languages.<p>
-	   It has been recognized that the Kitáb-i-Aqdas, being Sacred Scripture, should be presented in a form which can be read with ease and inspiration, uncluttered with the footnotes and index numbers that are common in scholarly texts. Nonetheless, to assist the reader in following the flow of the text and its changing themes, paragraph divisions have been added--such divisions not being common in works of Arabic literature--and these paragraphs have then
-	   </td>
-       <td width="0"></td>
-       <td width="20%" VALIGN=top><small><center><a name="vii">vii</a></center><p></small></td>
+	<td width="77%"><a name="para1"/><a name="pvii"/>
+	<center>
+	<h2>PREFACE</h2><p>
+	</center>
+	IN 1953 Shoghi Effendi, the Guardian of the Bahá'í Faith, included as one of the goals of his Ten Year Plan the preparation of a <a href="p141-164Synopsis.html">Synopsis and Codification</a> of the Laws and Ordinances of the Kitáb-i-Aqdas as an essential prelude to its translation. He himself worked on the codification, but had not finished it when he died in 1957. The task was continued on the basis of his work, and the resulting volume was released in 1973. That publication included, in addition to the Synopsis and Codification itself and explanatory notes, a compilation of the passages from the Kitáb-i-Aqdas which had already been translated by Shoghi Effendi and published in various books. The Synopsis and Codification covered the text of both the Kitáb-i-Aqdas and the Questions and Answers which constitutes an appendix to the Aqdas. In 1986 the Universal House of Justice decided that the time had come when the preparation of an English translation of the complete text of the Most Holy Book was both possible and essential and made its accomplishment a goal of the Six Year Plan 1986-1992. Its publication in English will be followed by translations in other languages.
+	</td>
+	<td VALIGN=top width="20%"><small>
+	<hr>
+	[CLUI:<br> 
+	<a href="../../../CLUI/UnifiedIndex.html#ShoghiEffendi">Shoghi Effendi</a><br>
+	<a href="../../../CLUI/UnifiedIndex.html#UniversalHouseofJustice">Universal House of Justice</a><br>
+	]
+	</small></td>
+	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">vii</DIV></center></small></td>
 </tr>
 <tr>
-       <td>
-	   been numbered for ease of access and indexing, as well as for uniformity of reference in all the languages in which the work will be published.<p>
-	   Following the text of the Aqdas is a brief compilation of Writings of Bahá'u'lláh which are supplementary to the Most Holy Book, and a translation of the Questions and Answers published here for the first time.<p>
-	   Shoghi Effendi had stated that the English translation of the Aqdas should be "copiously annotated". The policy followed in preparing the notes has been to concentrate on those points which might strike a non-Arabic-speaking reader as obscure or which, for various reasons, require elucidation  or background  information.  They are  not intended to be a comprehensive commentary on the text beyond these fundamental requirements.<p>
-	   The notes, which are placed following the Synopsis and Codification, are numbered sequentially. Each is preceded by a quotation of the passage to which it relates, and indicates the number of the paragraph in which this appears. This facilitates cross-reference between the text and the notes, while making it possible for readers to study the notes without repeatedly consulting the text, if they so prefer. It is hoped in this way to meet the needs of readers of a wide range of backgrounds and interests.<p>
-	   The index provides a guide to subjects in all sections of the volume.<p>
-	   The significance and character of the Kitáb-i-Aqdas and the range of subjects it contains have been graphically depicted by Shoghi Effendi in his history of the first Bahá'í century entitled <i><a href="../../SE/GPB/Cover.html">God Passes By</a></i>. As an assistance to the reader, these passages are provided in the <a href="p012-018Desc.html">section</a> that immediately follows the introduction. The <a href="p141-164Synopsis.html">Synopsis and Codification</a>, which is republished in this volume, serves as another aid for obtaining an overview of the Book.<p>
-	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="viii">viii</a></center><p></small></td>
+	<td><a name="para2"/>
+	It has been recognized that the Kitáb-i-Aqdas, being Sacred Scripture, should be presented in a form which can be read with ease and inspiration, uncluttered with the footnotes and index numbers that are common in scholarly texts. Nonetheless, to assist the reader in following the flow of the text and its changing themes, paragraph divisions have been added--such divisions not being common in works of Arabic literature--and these paragraphs have then<a name="pviii"></a> been numbered for ease of access and indexing, as well as for uniformity of reference in all the languages in which the work will be published.
+	</td>
+	<td VALIGN=top height=1px><small>
+	</small></td>
+	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">viii</DIV></center></small></td>
+</tr>
+
+<tr>
+	<td><a name="para3"/>
+	Following the text of the Aqdas is a brief <a href="p089-102Supp.html">compilation</a> of Writings of Bahá'u'lláh which are supplementary to the Most Holy Book, and a translation of the <a href="p103-140QA.html">Questions and Answers</a> published here for the first time.
+	</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td><a name="para4"/>
+	Shoghi Effendi had stated that the English translation of the Aqdas should be "copiously annotated". The policy followed in preparing the notes has been to concentrate on those points which might strike a non-Arabic-speaking reader as obscure or which, for various reasons, require elucidation  or background  information.  They are  not intended to be a comprehensive commentary on the text beyond these fundamental requirements.
+	</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td><a name="para5"/>
+	The <a href="p165-251Notes.html">notes</a>, which are placed following the Synopsis and Codification, are numbered sequentially. Each is preceded by a quotation of the passage to which it relates, and indicates the number of the paragraph in which this appears. This facilitates cross-reference between the text and the notes, while making it possible for readers to study the notes without repeatedly consulting the text, if they so prefer. It is hoped in this way to meet the needs of readers of a wide range of backgrounds and interests.
+	</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td><a name="para6"/>
+	The <a href="p258-296Index.html">index</a> provides a guide to subjects in all sections of the volume.
+	</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td><a name="para7"/>
+	The significance and character of the Kitáb-i-Aqdas and the range of subjects it contains have been graphically depicted by Shoghi Effendi in his history of the first Bahá'í century entitled <i><a href="../../SE/GPB/Cover.html">God Passes By</a></i>. As an assistance to the reader, these passages are provided in the <a href="p012-018Desc.html">section</a> that immediately follows the introduction. The <a href="p141-164Synopsis.html">Synopsis and Codification</a>, which is republished in this volume, serves as another aid for obtaining an overview of the Book.
+	</td>
+	<td></td>
+	<td></td>
 </tr>
 </table>
 
