--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -747,8 +747,10 @@
 	<td><a name="para75"></a>
 	The men of God's House of Justice have been charged with the affairs of the people. They, in truth, are the <a name="p27"/>Trustees of God among His servants and the daysprings of authority in His countries.
 	</td>
+	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="#para363">ISHRÁQÁT</a><p>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">27</DIV></center><p></small></td>
 </tr>
@@ -757,7 +759,8 @@
 	O people of God! That which traineth the world is Justice, for it is upheld by two pillars, reward and punishment. These two pillars are the sources of life to the world. Inasmuch as for each day there is a new problem and for every problem an expedient solution, such affairs should be referred to the Ministers of the House of Justice that they may act according to the needs and requirements of the time. They that, for the sake of God, arise to serve His Cause, are the recipients of divine inspiration from the unseen Kingdom. It is incumbent upon all to be obedient unto them. All matters of State should be referred to the House of Justice, but acts of worship must be observed according to that which God hath revealed in His Book.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="#para364">ISHRÁQÁT</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -3470,6 +3473,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	<a href="#para75">BISHÁRÁT</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p308-321Ch14.html#p319">p. 319</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -3480,6 +3484,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	<a href="#para76">BISHÁRÁT</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p308-321Ch14.html#p319">p. 319</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">129</DIV></center><p></small></td>
@@ -3491,7 +3496,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<a href="#para77">BISHÁRÁT</a><p>
-	<i>The Kitáb-i-Aqdas</i>, <a href="../KA/p089-102Supp.html#p91">p. 91</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p158">p. 158</a>
+	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p158">p. 158</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
