--- a/Baha'i/Others/ROB/V2/p171-193Ch08.html
+++ b/Baha'i/Others/ROB/V2/p171-193Ch08.html
@@ -199,7 +199,7 @@
        <td VALIGN=top><small><center><a name="p179">179</a></center><p>
 	   <hr>
 	   [Most Great Separation], vol. 2 p. <a href="p152-170Ch07.html#p165">165</a><p>
-	   [Bahá'u'lláh as Joseph]: The Revelation of Bahá'u'lláh, vol. 2 <a href="p236-269Ch11.html#p269">p. 269</a>, vol. 4 <a href="../V4/p073-090Ch05.html#p81">p. 81</a>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Bahá'u'lláhasJoseph">Bahá'u'lláh as Joseph</a>]
 	   </small></td>
 </tr>
 <tr>
