--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -576,7 +576,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   <hr>
 	   31. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para171">p. 171</a>.
 	   <hr>
-	   [Bahá'u'lláh as Joseph]: <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="p171-193Ch08.html#p179">p. 179</a>, vol. 4 <a href="../V4/p073-090Ch05.html#p81">p. 81</a>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Bahá'u'lláhasJoseph">Bahá'u'lláh as Joseph</a>]
 	   </small></td>
 </tr>
 </table>
