--- a/Baha'i/Others/ROB/V4/p073-090Ch05.html
+++ b/Baha'i/Others/ROB/V4/p073-090Ch05.html
@@ -150,7 +150,7 @@
 	   * A half-brother of Bahá'u'lláh, the Arch-breaker of the Covenant of the Báb. For his life see vols. <a href="../V1/p351-363Index.html#Yahyá,Mírzá">1</a> and <a href="../V2/p469-476Index.html#Yahyá,Mírzá">2</a>.
 	   <hr>
 	   <hr>
-	   [Bahá'u'lláh as Joseph]: <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../V2/p171-193Ch08.html#p179">p. 179</a>, <a href="../V2/p236-269Ch11.html#p269">p. 269</a>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Bahá'u'lláhasJoseph">Bahá'u'lláh as Joseph</a>]
 	   </small></td>
 </tr>
 <tr>
