--- a/Baha'i/SE/GPB/p087-234SecondPeriod.html
+++ b/Baha'i/SE/GPB/p087-234SecondPeriod.html
@@ -2759,7 +2759,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	<td VALIGN=top><small>
 	<hr>
 	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p012-018Desc.html">Description</a><p>
-	<i><a href="../../Baha/KI/Cover.html">The Kitáb-i-Íqán</a></i>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Íqán"><i>The Kitáb-i-Íqán</i></a>]
 	
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -2769,8 +2769,11 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	Revealed soon after Bahá'u'lláh had been transferred to the <a href="../../Others/ROB/V3/p253-274Ch12.html#facingp274">house of 'Údí Khammár</a> (circa 1873), at a time when He was still encompassed by the tribulations that had afflicted Him, through the acts committed by His enemies and the professed adherents of His Faith, this Book, this treasury enshrining the priceless gems of His Revelation, stands out, by virtue of the principles it inculcates, the administrative institutions it ordains and the function with which it invests the appointed Successor of its Author, unique and incomparable among the world's sacred Scriptures. For, unlike the Old Testament and the Holy Books which preceded it, in which the actual precepts uttered by the Prophet Himself are non-existent; unlike the Gospels, in which the few sayings attributed to Jesus Christ afford no clear guidance regarding the future administration of the affairs of His Faith; unlike even the Qur'án which, though explicit in the laws and ordinances formulated by the Apostle of God, is silent on the all-important subject of the succession, the Kitáb-i-Aqdas, <a href="../../Others/ROB/V3/Cover.html#cover5">revealed</a> from first to last by the Author of the Dispensation Himself, not only preserves for posterity the basic laws and ordinances on which the fabric of His future World Order must rest, but ordains, in addition to the function of interpretation which it confers upon His Successor, the necessary institutions through <a name="p214"></a>which the integrity and unity of His Faith can alone be safeguarded.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
-	</small></td>
+	<hr>
+	[authenticity] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 p. <a href="../../Others/ROB/V1/p018-044Ch03.html#p28">28</a>, p. <a href="../../Others/ROB/V1/p018-044Ch03.html#p40">40</a>, vol. 3 p. <a href="../../Others/ROB/V3/p147-173Ch08.html#p160">160</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodMuhammad">Apostle of God</a>]
+	</small>
+	</td>	
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">214</DIV></center><p></small></td>
 </tr>
 <tr>
@@ -2778,8 +2781,14 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	In this Charter of the future world civilization its Author—at once the Judge, the Lawgiver, the Unifier and Redeemer of mankind—announces to the kings of the earth the promulgation of the "<i>Most Great Law</i>"; pronounces them to be His vassals; proclaims Himself the "<i>King of Kings</i>"; disclaims any intention of laying hands on their kingdoms; reserves for Himself the right to "<i>seize and possess the hearts of men</i>"; warns the world's ecclesiastical leaders not to weigh the "<i>Book of God</i>" with such standards as are current amongst them; and affirms that the Book itself is the "<i>Unerring Balance</i>" established amongst men. In it He formally ordains the institution of the "<i>House of Justice,</i>" defines its functions, fixes its revenues, and designates its members as the "<i>Men of Justice,</i>" the "<i>Deputies of God,</i>" the "<i>Trustees of the All-Merciful,</i>" alludes to the future Center of His Covenant, and invests Him with the right of interpreting His holy Writ; anticipates by implication the institution of Guardianship; bears witness to the revolutionizing effect of His World Order; enunciates the doctrine of the "<i>Most Great Infallibility</i>" of the Manifestation of God; asserts this infallibility to be the inherent and exclusive right of the Prophet; and rules out the possibility of the appearance of another Manifestation ere the lapse of at least one thousand years.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
-	</small></td>
+	<hr>
+	[CLUI: <br>
+	<a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">House of Justice</a><br>
+	<a href="../../../CLUI/UnifiedIndex.html#Guardianship">Guardianship</a><br>
+	<a href="../../../CLUI/UnifiedIndex.html#InfallibilityMostGreat">Most Great Infallibility</a><br>
+	]
+	</small>
+	</td>	
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
@@ -2794,7 +2803,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 </tr>
 <tr>
 	<td><a name="para280"></a>
-	Apart from these provisions Bahá'u'lláh exhorts His followers to consort, with amity and concord and without discrimination, with <a name="p215"></a>the adherents of all religions; warns them to guard against fanaticism, sedition, pride, dispute and contention; inculcates upon them immaculate cleanliness, strict truthfulness, spotless chastity, trustworthiness; hospitality, fidelity, courtesy, forbearance, justice and fairness; counsels them to be "<i>even as the fingers of one hand and the limbs of one body</i>"; calls upon them to arise and serve His Cause; and assures them of His undoubted aid. He, furthermore, dwells upon the instability of human affairs; declares that true liberty consists in man's submission to His commandments; cautions them not to be indulgent in carrying out His statutes; prescribes the twin inseparable duties of recognizing the "<i>Dayspring of God's Revelation</i>" and of observing all the ordinances revealed by Him, neither of which, He affirms, is acceptable without the other.
+	Apart from these provisions Bahá'u'lláh exhorts His followers to consort, with amity and concord and without discrimination, with <a name="p215"></a>the adherents of all religions; warns them to guard against fanaticism, sedition, pride, dispute and contention; inculcates upon them immaculate cleanliness, strict truthfulness, spotless chastity, trustworthiness, hospitality, fidelity, courtesy, forbearance, justice and fairness; counsels them to be "<i>even as the fingers of one hand and the limbs of one body</i>"; calls upon them to arise and serve His Cause; and assures them of His undoubted aid. He, furthermore, dwells upon the instability of human affairs; declares that true liberty consists in man's submission to His commandments; cautions them not to be indulgent in carrying out His statutes; prescribes the twin inseparable duties of recognizing the "<i>Dayspring of God's Revelation</i>" and of observing all the ordinances revealed by Him, neither of which, He affirms, is acceptable without the other.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -2812,7 +2821,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 </tr>
 <tr>
 	<td><a name="para282"></a>
-	The laws and ordinances that constitute the major theme of this Book, Bahá'u'lláh, moreover, has specifically characterized as "<i>the breath of life unto all created things,</i>" as "<i>the mightiest stronghold,</i>" as the "<i>fruits</i>" of His "<i>Tree,</i>" as "<i>the highest means for the maintenance of order in the world and the security of its peoples,</i>" as "<i>the lamps of His wisdom and loving-providence,</i>" as "<i>the sweet smelling savor of <a name="p216"></a>His garment,</i>" as the "<i>keys</i>" of His "<i>mercy</i>" to His creatures. "<i>This Book,</i>" He Himself testifies, "<i>is a heaven which We have adorned with the stars of Our commandments and prohibitions.</i>" "<i>Blessed the man,</i>" He, moreover, has stated, "<i>who will read it, and ponder the verses sent down in it by God, the Lord of Power, the Almighty. Say, O men! Take hold of it with the hand of resignation … By My life! It hath been sent down in a manner that amazeth the minds of men. Verily, it is My weightiest testimony unto all people, and the proof of the All-Merciful unto all who are in heaven and all who are on earth.</i>" And again: "<i>Blessed the palate that savoreth its sweetness, and the perceiving eye that recognizeth that which is treasured therein, and the understanding heart that comprehendeth its allusions and mysteries. By God! Such is the majesty of what hath been revealed therein, and so tremendous the revelation of its veiled allusions that the loins of utterance shake when attempting their description.</i>" And finally: "<i>In such a manner hath the Kitáb-i-Aqdas been revealed that it attracteth and embraceth all the divinely appointed Dispensations. Blessed those who peruse it! Blessed those who apprehend it! Blessed those who meditate upon it! Blessed those who ponder its meaning! So vast is its range that it hath encompassed all men ere their recognition of it. Erelong will its sovereign power, its pervasive influence and the greatness of its might be manifested on earth.</i>"
+	The laws and ordinances that constitute the major theme of this Book, Bahá'u'lláh, moreover, has specifically characterized as "<i>the breath of life unto all created things,</i>" as "<i>the mightiest stronghold,</i>" as the "<i>fruits</i>" of His "<i>Tree,</i>" as "<i>the highest means for the maintenance of order in the world and the security of its peoples,</i>" as "<i>the lamps of His wisdom and loving-providence,</i>" as "<i>the sweet smelling savor of <a name="p216"></a>His garment,</i>" and the "<i>keys</i>" of His "<i>mercy</i>" to His creatures. "<i>This Book,</i>" He Himself testifies, "<i>is a heaven which We have adorned with the stars of Our commandments and prohibitions.</i>" "<i>Blessed the man,</i>" He, moreover, has stated, "<i>who will read it, and ponder the verses sent down in it by God, the Lord of Power, the Almighty. Say, O men! Take hold of it with the hand of resignation … By My life! It hath been sent down in a manner that amazeth the minds of men. Verily, it is My weightiest testimony unto all people, and the proof of the All-Merciful unto all who are in heaven and all who are on earth.</i>" And again: "<i>Blessed the palate that savoreth its sweetness, and the perceiving eye that recognizeth that which is treasured therein, and the understanding heart that comprehendeth its allusions and mysteries. By God! Such is the majesty of what hath been revealed therein, and so tremendous the revelation of its veiled allusions that the loins of utterance shake when attempting their description.</i>" And finally: "<i>In such a manner hath the Kitáb-i-Aqdas been revealed that it attracteth and embraceth all the divinely appointed Dispensations. Blessed those who peruse it! Blessed those who apprehend it! Blessed those who meditate upon it! Blessed those who ponder its meaning! So vast is its range that it hath encompassed all men ere their recognition of it. Erelong will its sovereign power, its pervasive influence and the greatness of its might be manifested on earth.</i>"
 	</td>
 	<td VALIGN=top><small>
 	<hr>
