--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -64,7 +64,8 @@ para176 - footnotes: added ROB V1 index
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["He doeth whatsoever He willeth"] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para47">&para;47</a>
+	["He doeth whatsoever He willeth"] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para47">&para;47</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#InfallibilityMostGreat">Most Great Infallibility</a>]<p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
