--- a/Baha'i/Baha/GL/p003-346.html
+++ b/Baha'i/Baha/GL/p003-346.html
@@ -4214,7 +4214,14 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["This is the Day..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para80">&para;80</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p305">p. 305</a>
+	["This is the Day..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para80">&para;80</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p305">p. 305</a><p>
+	[CLUI:<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Moses">He Who held converse with God</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Sinai">Sinai</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Christ">the Spirit of God</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#MountCarmel">Carmel</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Zion">Zion</a><br>
+	]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">211</DIV></center></small></td>
 </tr>
