--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -245,7 +245,8 @@
 		 </td>
 	 	 <td VALIGN=top><small>
 		 <hr>
-		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#UniversalHouseofJustice">Seat of Justice</a>]
+		 Note <a href="p165-251Notes.html#note42">42</a><p>
+		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">Seat of Justice</a>]
 		 </small>
 		 <td>&nbsp;</td>
 	 </tr>
@@ -254,7 +255,12 @@
 	 	 <td VALIGN=top>
 		 Should the deceased be survived by none of those whose names have been recorded by the Pen of the Most High, his estate shall, in its entirety, revert to the aforementioned Seat that it may be expended on that which is prescribed by God. He, verily, is the Ordainer, the Omnipotent.<p>
 		 </td>
-	 	 <td>&nbsp;</td>
+	 	 <td VALIGN=top><small>
+		 <hr>
+		 Note <a href="p165-251Notes.html#note42">42</a><p>
+		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">Seat of Justice</a>]
+		 </small>
+		 <td>&nbsp;</td>
 		 <td>&nbsp;</td>
 	 </tr>
 	 <tr>
@@ -1770,7 +1776,7 @@
 		 </td>
 		 <td VALIGN=top><small>
 		 <hr>
-		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bayánlawsofabrogatedaskingquestions">ask it of God</a>]
+		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Man-Yuzhiruh'lláhprohibitiononquestioning">ask it of God</a>]
 		 </small></td>
 		 <td>&nbsp;</td>
 	 </tr>
