--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -619,7 +619,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p164">p. 164</a><p>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Sin,ConfessionOf">confession of sins</a>]
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Aqdasforbidsconfession">confession of sins</a>]
 
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
