--- a/Baha'i/Baha/TOB/p277-299Index.html
+++ b/Baha'i/Baha/TOB/p277-299Index.html
@@ -1601,7 +1601,7 @@ Qur'án<a name="Qur'án"></a>, <a href= "../TOB/p001-270TOB.html#p15">15</a>, <a
 	quotations from
 		<blockquote>
 		'Behold, and thou shalt see Me', <a href= "../TOB/p001-270TOB.html#p239">239</a><br>
-		bring forth people, 115, <a href= "../TOB/p001-270TOB.html#p259">259</a><br>
+		bring forth people, <a href= "../TOB/p001-270TOB.html#p115">115</a>, <a href= "../TOB/p001-270TOB.html#p259">259</a><br>
 		cavillings, <a href= "../TOB/p001-270TOB.html#p43">43</a><br>
 		Day when men before Lord, <a href= "../TOB/p001-270TOB.html#p115">115</a><br>
 		few servants truly thankful, <a href= "../TOB/p001-270TOB.html#p58">58</a><br>
