--- a/Baha'i/Others/ROB/V1/p294-314Ch18.html
+++ b/Baha'i/Others/ROB/V1/p294-314Ch18.html
@@ -163,7 +163,7 @@
        <td VALIGN=top><small><center><a name="p301">301</a></center><p>
 	   <hr>
 	   <hr>
-	   [questioning Bahá'u'lláh] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para126">&para;126</a>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Man-Yuzhiruh'lláhprohibitiononquestioning">questioning Bahá'u'lláh</a>]
 	   </small></td>
 </tr>
 <tr>
